
===New Functions:
* SetEnableParent
* GetEquippedWeapon
* GetEquippedWeaponRef
* GetCalculatedAPCost
* GetPosArray
* GetCompassTargets
* IsOutsideMainThread
* GetLiveEffectBaseTrait
* GetActorValueName
* SetINIInteger_Cached
* GetAddedItemRefShowOff

===New Event Handlers (for SetEventHandlerAlt):
* "ShowOff:OnPreActivate"
* "ShowOff:OnPreActivateInventoryItem"
* "ShowOff:OnPreDropInventoryItem"
* "ShowOff:OnLockpickMenuClose"
* "ShowOff:OnPCMiscStatChange"
* "ShowOff:OnProjectileCreate"
* "ShowOff:OnProjectileDestroy"
* "ShowOff:OnProjectileImpact"
* "ShowOff:OnQuestAdded"
* "ShowOff:OnQueueCornerMessage"
* "ShowOff:OnShowCornerMessage"
* "ShowOff:OnDisplayObjective"
* "ShowOff:OnCompleteObjective"
* "ShowOff:OnFireWeapon"


//===v1.51

===Bug Fixes:
* Fixed bad hook for the "ShowOff:OnShowCornerMessage" event. This may fix the NVAC-related crashes users have reported.

===Function changes:
* Allow passing a formlist of items for GetEquippedItemRefForItem


//===v1.55

===Bug Fixes:
* Fixed GetIngestibleConsumeSound causing a crash if the ingestible has no consume sound.
* Fixed hook for "ShowOff:OnProjectileCreate" causing issues with "continuous beam"-type projectiles
* Fixed GetEquippedItemRefForItem not working properly with formlists.

===New Functions:
* GetIsPlayerOverencumbered - 'sup
* RefillPlayerAmmo
* AuxTimerStart
* AuxTimerStop
* AuxTimerPaused
* AuxTimerTimeElapsed
* AuxTimerTimeToCountdown
* AuxTimerTimeLeft
* SetOnAuxTimerStartHandler
* SetOnAuxTimerStopHandler
* ClearShowoffSavedData

//===v1.60
===Bug Fixes:
* Removed confusing hook conflict detection msg related to Tweaks.

===New Functions:
*

===Function changes:
* RefillPlayerAmmo now only shows error console messages if console is open, and returns 1/0 for success.


====== (Template:)

//===v???
===Bug Fixes:
*

===New Functions:
*

===Function changes:
*

******DON'T FORGET TO UPDATE THE PLUGIN VERSION BEFORE EVERY RELEASE*********